import file css dan bootstrap pada main.js

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="src/styles/style.css">
-  <link rel="stylesheet" href="src/styles/header.css">
-  <link rel="stylesheet" href="src/styles/movie.css">
-
-  <title>TMDB API TEST</title>
+  <title>MovieMaster</title>
 </head>
 
 <body>
