--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,9 @@
   </header>
 
   <main class="container">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 movieList">
+    <movie-list></movie-list>
+
+    <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 movieList">
       <div class="col">
         <div class="card movieEl">
           <img
@@ -47,7 +49,7 @@
         </div>
       </div>
 
-    </div>
+    </div> -->
   </main>
 
 
