--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>MovieMaster</title>
 </head>
 
@@ -12,14 +11,13 @@
   <header>
     <nav class="navbar navbar-dark" style="background-color: var(--c3);">
       <div class="container-fluid">
-        <a class="navbar-brand">MovieMaster</a>
+        <a href="index.html" class="navbar-brand">MovieMaster</a>
       </div>
     </nav>
-
     <div class="banner">
-      <div class="container d-flex justify-content-between align-items-center">
-        <h1>Find out popular movies,<br>or find you are looking for!</h1>
-        <form class="d-flex" id="searchForm">
+      <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+        <h1 class="me-md-4 mb-0">Find out popular movies, <br>or find what you're looking for!</h1>
+        <form class="mt-5 mt-md-0" id="searchForm">
           <input class="form-control me-2" type="search" placeholder="Search" id="search" aria-label="Search">
         </form>
       </div>
@@ -28,31 +26,7 @@
 
   <main class="container">
     <movie-list></movie-list>
-
-    <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 movieList">
-      <div class="col">
-        <div class="card movieEl">
-          <img
-            src="https://images.unsplash.com/photo-1485846234645-a62644f84728?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=740&q=80"
-            class="card-img-top" alt="img">
-
-          <div class="movie-info">
-            <h2>Movie Title</h2>
-            <span class="rating">9.8</span>
-          </div>
-
-          <div class="overview">
-            <h3>Overview</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, amet! Vel quae quam ab ducimus officiis
-              explicabo, unde ipsam commodi assumenda, dolore deserunt quasi quia cupiditate quis corporis culpa et!</p>
-          </div>
-        </div>
-      </div>
-
-    </div> -->
   </main>
-
-
 </body>
 
 </html>
